# kepler-isolation

./: .editorconfig  .gitignore  IDEA.md  Makefile  PRINCIPLES.md  README.md  STORY.md  play  pyproject.toml
.walter/runs/20260616-204742/: session.json  step-0001.json  step-0002.json  step-0003.json  step-0004.json
.walter/runs/20260616-210737/: step-0001.json  step-0002.json  step-0003.json  step-0004.json  step-0005.json  step-0006.json
kepler_isolation/: AppIcon.icns  ROADMAP.md  requirements-tui.txt
kepler_isolation/docs/: CONTRIBUTING.md  SHIP.md
kepler_isolation/src/: __main__.py  engine.py  game_state.py  gui.py  item.py  leaderboard.py  map_builder.py  monster.py  parser.py  player.py  room.py  save.py  tui.py  version.py
kepler_isolation/tests/: conftest.py  test_engine.py  test_game.py  test_tui.py
thin_air_game/: CONTRIBUTING.md  README.md  ROADMAP.md
thin_air_game/src/: __main__.py  game_state.py  item.py  map_builder.py  monster.py  parser.py  player.py  room.py  save.py
thin_air_game/tests/: conftest.py  test_game.py
thin_air_game/tools/: balance.py
